Add section fort-deb

--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
       <section>
         
       </section>
-      <section>
+      <section class="fort-deb"> <!-- MARIA -->
+<!-- Fuentes de Google fonts: añadir a head:
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Rubik:wght@500;600&display=swap" rel="stylesheet">
+
+-->
+
+
+        <div class="fortalezas">
+          <h3 class="fortalezas__title">Fortalezas</h3>
+          <p class="fortalezas__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, pariatur a ea alias autem adipisci quaerat praesentium nemo. At tempora voluptatem tenetur repellendus nesciunt aut quidem laboriosam vel culpa quo.</p>
+        </div>
+        <div class="debilidades">
+          <h3 class="debilidades__title">Debilidades</h3>
+          <p class="debilidades__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati beatae nam sapiente esse quibusdam unde earum quis voluptatum recusandae ab repudiandae pariatur ullam labore, inventore accusamus in eum ipsa. Sint.</p>
+        </div>
         
       </section>
       <section>
