Added styles to header

--- a/index.html
+++ b/index.html
@@ -4,14 +4,46 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Trabajo grupal</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./css/style.css"
+    />
     <script src="main.js"></script>
   </head>
   <body>
-    <header>Nombre</header>
+    <header class="header">
+      <h1 class="titulo">NOMBRE DEL GRUPO</h1>
+      <nav class="navegacion">
+        <ul class="lista_superior">
+          <li>EQUIPO</li>
+          <li>QUIENES SOMOS</li>
+          <li>CONTACTO</li>
+        </ul>
+      </nav>
+    </header>
     <main></main>
-    <footer></footer>
+    <footer class="footer">
+      <span class="nombre_grupo"
+        >Nombre del grupo 2023</span
+      >
+      <nav class="navegacion_inferior">
+        <ul class="lista_inferior">
+          <li>EQUIPO</li>
+          <li>QUIÉNES SOMOS</li>
+          <li>CONTACTO</li>
+        </ul>
+        <img
+          src="./imagenes/logo-adalab.png"
+          alt="logo adalab"
+          class="imange_logo"
+        />
+      </nav>
+    </footer>
   </body>
 </html>
-
