--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         
       </section>
       <section class="fort-deb"> <!-- MARIA -->
+        <div class="fort-deb__triangle"></div>
         <div class="fortalezas">
           <h3 class="fortalezas__title">Fortalezas</h3>
           <p class="fortalezas__content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, pariatur a ea alias autem adipisci quaerat praesentium nemo. At tempora voluptatem tenetur repellendus nesciunt aut quidem laboriosam vel culpa quo.</p>
