--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <header>Nombre</header>
+    <header></header>
     <main>
-      <section>
+        <section class="hero"> 
+        <div class="hero-content">
+        <span class="Lorem-ipsum">Lorem impsum dolor sit amet consectetur adipiscing elit.</span>
+        </div>
 
       </section>
-      <section>
+      
         
       </section>
       <section>
