--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section class="about-us">
         <h2 class="about-us--title">QUIÉNES SOMOS</h2>
         <article class="about-us--article">
-          <img src="./imagenes/titanic.png" alt="imagen perfil 1" />
+          <img src="./imagenes/titanic.png" alt="imagen perfil 0" />
           <div class="about-us--info">
           <p class="about-us--name">Nombre 0</p>
           <p class="about-us--description">
@@ -72,7 +72,7 @@
           </div>
         </article>
         <article class="about-us--article about-us__right">
-          <img src="./imagenes/titanic.png" alt="imagen perfil 2" />
+          <img src="./imagenes/titanic.png" alt="imagen perfil 1" />
           <div class="about-us--info about-us__right--info">
             <p class="about-us--name about-us__right--name">Nombre 1</p>
             <p class="about-us--description about-us__right--description" >
@@ -94,7 +94,7 @@
           </div>
         </article>
         <article class="about-us--article">
-          <img src="./imagenes/titanic.png" alt="imagen perfil 3" />
+          <img src="./imagenes/titanic.png" alt="imagen perfil 2" />
           <div class="about-us--info">
             <p class="about-us--name">Nombre 2</p>
             <p class="about-us--description">
@@ -115,11 +115,11 @@
             </div>
           </div>
         </article>
-        <article class="about-us--article about-us__article--right">
-          <img src="./imagenes/titanic.png" alt="imagen perfil 4" />
-          <div class="about-us--info about-us--right">
-            <p class="about-us--name about-us--right">Nombre 3</p>
-            <p class="about-us--description about-us--right">
+        <article class="about-us--article about-us__right">
+          <img src="./imagenes/titanic.png" alt="imagen perfil 3" />
+          <div class="about-us--info about-us__right--info">
+            <p class="about-us--name about-us__right--name">Nombre 3</p>
+            <p class="about-us--description about-us__right--description">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
               quasi exercitationem commodi earum veniam veritatis repellendus ad
               vitae, cupiditate velit inventore voluptates expedita quibusdam
@@ -138,7 +138,7 @@
           </div>
         </article>
         <article class="about-us--article">
-          <img src="./imagenes/titanic.png" alt="imagen perfil 5" />
+          <img src="./imagenes/titanic.png" alt="imagen perfil 4" />
           <div class="about-us--info">
             <p class="about-us--name">Nombre 4</p>
             <p class="about-us--description">
