--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <header>
+    <header class="header">
       <h1 class="titulo">NOMBRE DEL GRUPO</h1>
       <nav class="navegacion">
         <ul class="lista_superior">
@@ -172,8 +172,7 @@
     </main>
     <footer>
       <span class="nombre_grupo"
-        >Nombre del grupo 2023</span
-      >
+        >Nombre del grupo 2023</span>
       <nav class="navegacion_inferior">
         <ul class="lista_inferior">
           <li>EQUIPO</li>
@@ -183,7 +182,7 @@
         <img
           src="./imagenes/logo-adalab.png"
           alt="logo adalab"
-          class="imange_logo"
+          class="image_logo"
         />
       </nav>
     </footer>
