--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="titulo">NOMBRE DEL GRUPO</h1>
+      <div class="title_div">
+        <h1 class="titulo">NOMBRE DEL GRUPO</h1>
+      </div>
       <nav class="navegacion">
         <ul class="lista_superior">
-          <li>EQUIPO</li>
-          <li>QUIENES SOMOS</li>
-          <li>CONTACTO</li>
+          <li><a href="">EQUIPO</a></li>
+          <li><a href="">QUIENES SOMOS</a></li>
+          <li><a href="">CONTACTO</a></li>
         </ul>
       </nav>
     </header>
