fix layout errors

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,25 +42,49 @@
       <include src="./partials/s-w.html"></include>
       <section class="about-us">
         <h2 class="about-us__title">QUIÉNES SOMOS</h2>          
-        <include src="./partials/about-us.html" image ="./assets/images/titanic.png" alt="profile-Aida Blaya" name="Aida Blaya" description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+        <include 
+        src="./partials/about-us.html" 
+        image="./assets/images/titanic.png" 
+        alt="profile-Aida Blaya" 
+        name="Aida Blaya" 
+        description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
           exercitationem commodi earum veniam veritatis repellendus ad vitae,
           cupiditate velit inventore voluptates expedita quibusdam vitae,
           cupiditate velit inventore voluptates expedita quibusdam iure."></include>
           
-          <include src="./partials/about-us.html" className ="right" image ="./assets/images/titanic.png" alt="profile-Irene Talavera" name="Irene Talavera" description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+          <include 
+          src="./partials/about-us.html" 
+          className="right" 
+          image="./assets/images/titanic.png" 
+          alt="profile-Irene Talavera" 
+          name="Irene Talavera" 
+          description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
             exercitationem commodi earum veniam veritatis repellendus ad vitae,
             cupiditate velit inventore voluptates expedita quibusdam vitae,
             cupiditate velit inventore voluptates expedita quibusdam iure."></include>
           
-          <include src="./partials/about-us.html"  image ="./assets/images/titanic.png" alt="profile-Maria Sánchez" name="Maria Sánchez" description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+          <include src="./partials/about-us.html"
+            image="./assets/images/titanic.png" 
+            alt="profile-Maria Sánchez" 
+            name="Maria Sánchez" 
+            description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
             exercitationem commodi earum veniam veritatis repellendus ad vitae,
             cupiditate velit inventore voluptates expedita quibusdam vitae,
             cupiditate velit inventore voluptates expedita quibusdam iure."></include>
-          <include src="./partials/about-us.html" className ="right" image ="./assets/images/titanic.png" alt="profile-Sara Osácar" name="Sara Osácar" description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+          <include src="./partials/about-us.html" 
+          className="right" 
+          image="./assets/images/titanic.png" 
+          alt="profile-Sara Osácar" 
+          name="Sara Osácar" 
+          description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
             exercitationem commodi earum veniam veritatis repellendus ad vitae,
             cupiditate velit inventore voluptates expedita quibusdam vitae,
             cupiditate velit inventore voluptates expedita quibusdam iure."></include>
-          <include src="./partials/about-us.html" image ="./assets/images/titanic.png" alt="profile-Lourdes Juárez" name="Lourdes Juárez" description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
+          <include src="./partials/about-us.html" 
+          image="./assets/images/titanic.png" 
+          alt="profile-Lourdes Juárez" 
+          name="Lourdes Juárez" 
+          description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
             exercitationem commodi earum veniam veritatis repellendus ad vitae,
             cupiditate velit inventore voluptates expedita quibusdam vitae,
             cupiditate velit inventore voluptates expedita quibusdam iure."></include>
