fix changes index links

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -56,8 +56,8 @@
           src="./partials/about-us.html" 
           className="right" 
           image="./assets/images/titanic.png" 
-          alt="profile-Irene Talavera" 
-          name="Irene Talavera" 
+          alt="profile-Irene Talavero" 
+          name="Irene Talavero" 
           description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
           exercitationem commodi earum veniam veritatis repellendus ad vitae,
           cupiditate velit inventore voluptates expedita quibusdam vitae,
