--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -42,7 +42,7 @@
         <section class="contact">
             <h1 class="contact__title">CONTACTO</h1>
             <P class="contact__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc rutrum ullamcorper mauris, vel convallis metus eleifend in.</P>
-            <small class="contact__small">Todos los campos marcados con * son obligatorios.</small>
+            <small class="contact__small">Todos los campos marcados con <span class="label__asterisk">*</span> son obligatorios.</small>
         </section>
 
         <section>
