--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Trabajo grupal</title>
+    <title>Cleopatra's Digital Empire - Contacto</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -13,6 +13,7 @@
       src="https://kit.fontawesome.com/960132646f.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="./assets/images/favicon.svg" type="image/x-icon">
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -36,9 +37,20 @@
   </head>
 
   <body>
-    <include src="./partials/header.html"></include>
+    <header class="header">
+  <div class="header__content">
+    <a href="../index.html" class="header__link"><h1 class="header__title">Cleopatra's Digital Empire</h1></a>
+  </div>
+  <nav class="nav__list">
+    <ul class="nav__list--content">
+      <li><a href="./index.html#team">EQUIPO</a></li>
+      <li><a href="./index.html#about-us">QUIENES SOMOS</a></li>
+      <li><a href="./contact.html">CONTACTO</a></li>
+    </ul>
+  </nav>
+</header>
     <main>
-        <img src="./assets/images/titanic.png" alt="">
+        <section class="hero__contact"></section>
         <section class="contact">
             <h1 class="contact__title">CONTACTO</h1>
             <P class="contact__text">Si tienes interés en contactar con alguna de nosotras, rellena el siguiente formulario y te contestaremos lo antes posible. Muchas gracias.</P>
