--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Trabajo grupal</title>
+    <title>Cleopatra's Digital Empire</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
@@ -13,6 +13,7 @@
       src="https://kit.fontawesome.com/960132646f.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="./assets/images/favicon.svg" type="image/x-icon">
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -44,52 +45,55 @@
         <h2 class="about-us__title">QUIÉNES SOMOS</h2>          
         <include 
           src="./partials/about-us.html" 
-          image="./assets/images/titanic.png" 
+          image="./assets/images/aida.gif" 
           alt="profile-Aida Blaya" 
           name="Aida Blaya" 
-          description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-          exercitationem commodi earum veniam veritatis repellendus ad vitae,
-          cupiditate velit inventore voluptates expedita quibusdam vitae,
-          cupiditate velit inventore voluptates expedita quibusdam iure.">
+          description="Aventurera que busca nuevos caminos. Después de especializarme en una disciplina que no me motivaba, escuché sobre un tesoro oculto y no pude resistirme a la llamada. Soy atrevida, curiosa y estoy encantada de formar parte del equipo que llagará a la cima de la pirámide."
+          linkedin="https://www.linkedin.com/in/aidabla/"
+          github="https://github.com/Aidablaya"
+          email="mailto:aidablaya@gmail.com">
         </include>
         <include 
           src="./partials/about-us.html" 
           className="right" 
-          image="./assets/images/titanic.png" 
+          image="./assets/images/irene.gif" 
           alt="profile-Irene Talavero" 
           name="Irene Talavero" 
-          description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-          exercitationem commodi earum veniam veritatis repellendus ad vitae,
-          cupiditate velit inventore voluptates expedita quibusdam vitae,
-          cupiditate velit inventore voluptates expedita quibusdam iure.">
-        </include>          
+          description="Futura programadora aventurera del asfalto. Me encanta explorar mundo y descubrir nuevas maravillas. 
+          Esta vez he decidido aventurarme, en lo profesional, en el sector tecnológico para dar un giro de 180º a mi vida y ver hacia que rutas nuevas me lleva.
+          Lista para asumir cualquier desafío que se me presente!"
+          linkedin="https://www.linkedin.com/in/irene-talavero-palomino/"
+          github="https://github.com/IreneTaPa"
+          email="mailto:italavero@hotmail.com">
+        </include>
         <include src="./partials/about-us.html"
-          image="./assets/images/titanic.png" 
+          image="./assets/images/maria.gif" 
           alt="profile-Maria Sánchez" 
-          name="Maria Sánchez" 
-          description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-          exercitationem commodi earum veniam veritatis repellendus ad vitae,
-          cupiditate velit inventore voluptates expedita quibusdam vitae,
-          cupiditate velit inventore voluptates expedita quibusdam iure.">
+          name="María Sánchez" 
+          description="Como socióloga, he pasado gran parte de mi vida entre libros y pantallas. Aquella vida me hasta una institución científica de renombre en España que decidió contratarme como investigadora.
+          Ahora, tras cinco años aprendiendo a encontrar soluciones a los problemas de investigación, he tomado la iniciativa de añadir a mi carrera la aventura del desarrollo web, con la que espero convertirme en una exitosa exploradora."
+          linkedin="https://www.linkedin.com/in/maria-sanchez-roman"
+          github="https://github.com/masarom"
+          email="mailto:romansanmaria@gmail.com">
         </include>
         <include src="./partials/about-us.html" 
           className="right" 
-          image="./assets/images/titanic.png" 
+          image="./assets/images/sara.gif" 
           alt="profile-Sara Osácar" 
           name="Sara Osácar" 
-          description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-          exercitationem commodi earum veniam veritatis repellendus ad vitae,
-          cupiditate velit inventore voluptates expedita quibusdam vitae,
-          cupiditate velit inventore voluptates expedita quibusdam iure.">
+          description="Inquieta y curiosa en general. Tras muchos años dedicándome a la producción y gestión cultural, decido dar un giro de timón y sin previo conocimiento, adentrarme en el mundo del código. Me armo de valor, paciencia y fortaleza, y me acompaña una exquisita katana para enfrentarme a los múltiples displays & variables que se me presenten. Preparada para enfrentarme e ir avanzando en el camino!"
+          linkedin="https://www.linkedin.com/in/saraosacar/"
+          github="https://github.com/SaraOsacar"
+          email="mailto:saraosacar@gmail.com">
         </include>
         <include src="./partials/about-us.html" 
-          image="./assets/images/titanic.png" 
+          image="./assets/images/lourdes.gif" 
           alt="profile-Lourdes Juárez" 
           name="Lourdes Juárez" 
-          description="Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur quasi
-          exercitationem commodi earum veniam veritatis repellendus ad vitae,
-          cupiditate velit inventore voluptates expedita quibusdam vitae,
-          cupiditate velit inventore voluptates expedita quibusdam iure.">
+          description="Tras pasar años trabajando en el campo de la administración y coordinación de equipos, siempre vinculado a empresas del mundo tecnológico y, en los últimos años, a la creación de páginas web en Prestashop, mi insaciable curiosidad me llevó a esta nueva aventura donde espero descubrir un mundo completamente nuevo lleno de cosas interesantes."
+          linkedin="https://www.linkedin.com/in/lourdes-ju%C3%A1rez-porto-984392129"
+          github="https://github.com/Lourdesjupo"
+          email="lourdes.jupo@gmail.com">
           </include>
         </section>
       </main>
