add final fixes

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,7 +48,7 @@
           image="./assets/images/aida.gif" 
           alt="profile-Aida Blaya" 
           name="Aida Blaya" 
-          description="Aventurera que busca nuevos caminos. Después de especializarme en una disciplina que no me motivaba, escuché sobre un tesoro oculto y no pude resistirme a la llamada. Soy atrevida, curiosa y estoy encantada de formar parte del equipo que llagará a la cima de la pirámide."
+          description="Aventurera que busca nuevos caminos. Después de especializarme en una disciplina que no me motivaba, escuché sobre una aventura para encontrar un código oculto y no pude resistirme a la llamada. Soy atrevida, curiosa y estoy encantada de formar parte del equipo que llagará a descifrar el nuevo código."
           linkedin="https://www.linkedin.com/in/aidabla/"
           github="https://github.com/Aidablaya"
           email="mailto:aidablaya@gmail.com">
@@ -70,8 +70,7 @@
           image="./assets/images/maria.gif" 
           alt="profile-Maria Sánchez" 
           name="María Sánchez" 
-          description="Como socióloga, he pasado gran parte de mi vida entre libros y pantallas. Aquella vida me hasta una institución científica de renombre en España que decidió contratarme como investigadora.
-          Ahora, tras cinco años aprendiendo a encontrar soluciones a los problemas de investigación, he tomado la iniciativa de añadir a mi carrera la aventura del desarrollo web, con la que espero convertirme en una exitosa exploradora."
+          description="Socióloga de espíritu perspicaz y resolutivo, he vivido inmersa en libros y pantallas desde muy joven. Pasé cinco años investigando sobre envejecimiento activo en una prestigiosa institución científica española, donde aprendí la importancia de crear entornos virtuales adaptados a los usuarios finales. Ahora, me aventuro en el desarrollo web para convertirme en una exitosa descifradora del código."
           linkedin="https://www.linkedin.com/in/maria-sanchez-roman"
           github="https://github.com/masarom"
           email="mailto:romansanmaria@gmail.com">
